# stwo-cairo

./: .gitignore  .tool-versions  .typos.toml  AGENTS.md  CLAUDE.md  Cargo.toml  CompactBinary specs.md  INSTRUCTIONS.md  README.md  converter.py  gali.txt  proof_params.json  rustfmt.toml
cairo-prove/: .gitignore  Cargo.toml  README.md  build.sh  rust-toolchain.toml
cairo-prove/example/: .tool-versions  Scarb.toml
cairo-prove/example/src/: lib.cairo
cairo-prove/scripts/: clippy.sh  test_flow.sh
cairo-prove/src/: args.rs  execute.rs  lib.rs  main.rs  prove.rs
runnair/: Cargo.toml
runnair/crates/runner/: Cargo.toml
runnair/crates/runner/src/: lib.rs
runnair/scripts/: clippy.sh
stwo_cairo_prover/: .gitattributes  .gitignore  Cargo.toml  Cross.toml  cairo_proof.txt  diff.txt  out.txt  small_proof.json
stwo_cairo_prover/.config/: nextest.toml
stwo_cairo_prover/crates/adapted_prover/: Cargo.toml  build.rs
stwo_cairo_prover/crates/adapted_prover/src/: main.rs
stwo_cairo_prover/crates/adapter/: Cargo.toml
stwo_cairo_prover/crates/adapter/src/: adapter.rs  builtins.rs  decode.rs  lib.rs  memory.rs  opcodes.rs  plain.rs  relocator.rs  test_utils.rs  (+1 more)
stwo_cairo_prover/crates/air_structs_derive/: Cargo.toml
stwo_cairo_prover/crates/cairo-air/: Cargo.toml
stwo_cairo_prover/crates/cairo-serialize/: Cargo.toml
stwo_cairo_prover/crates/cairo-serialize-derive/: Cargo.toml
stwo_cairo_prover/crates/cairo_air/: Cargo.toml
stwo_cairo_prover/crates/cli/: Cargo.toml
stwo_cairo_prover/crates/common/: Cargo.toml  casm_registry.json
stwo_cairo_prover/crates/component_utils/: Cargo.toml
stwo_cairo_prover/crates/components/: Cargo.toml
stwo_cairo_prover/crates/continuation/: Cargo.toml
stwo_cairo_prover/crates/dev_utils/: Cargo.toml  Makefile
stwo_cairo_prover/crates/mul_mod_builtin/: Cargo.toml
stwo_cairo_prover/crates/prover/: Cargo.toml  genericopcode_with_claimed_sum.cairo  genericopcode_without_claimed_sum.cairo  prover_input_info.json
stwo_cairo_prover/crates/prover_types/: Cargo.toml
stwo_cairo_prover/crates/recursion_bridge/: Cargo.toml
stwo_cairo_prover/crates/run_and_prove/: Cargo.toml
stwo_cairo_prover/crates/runner/: Cargo.toml
stwo_cairo_prover/crates/utils/: Cargo.toml
stwo_cairo_prover/crates/vm_runner/: Cargo.toml
stwo_cairo_prover/scripts/: SLOW_TESTS_README.md  bump_stwo_deps.sh  bump_versions.sh  check_stable.sh  clippy.sh  download_tests_input.sh  fetch_large_files.sh  publish_workspace_crates.sh  rename_prover_files.py  run_large_test.sh  slow_tests.json  test_changed.py
stwo_cairo_prover/src/: air.rs  execution_trace.rs  main.rs  mem.rs  opcode.rs  rc.rs  ret.rs  test_utils.rs
stwo_cairo_prover/src/air/: air.rs  cairo.rs  mod.rs  opcode.rs  ret.rs
stwo_cairo_prover/src/cairo_air/: mod.rs
stwo_cairo_prover/src/components/: memory.rs  mod.rs  range_check_unit.rs
stwo_cairo_prover/src/input/: decode.rs  instructions.rs  io.rs  mem.rs  mod.rs  vm_import.rs
stwo_cairo_prover/src/prover_types/: mod.rs
stwo_cairo_prover/test_data/: Dockerfile_cairo_compile  cairo_compile.sh  trace_file
stwo_cairo_prover/test_data/blake_opcode/: mem  priv.json  pub.json  trace
stwo_cairo_prover/test_data/fibonacci/: .gitignore  compiled.json  fibonacci.cairo  fibonacci_proof.json  test_output_old.txt
stwo_cairo_prover/test_data/test_big_program/: big_program.cairo
stwo_cairo_prover/test_data/test_outputs/: cairo0.cairo  compiled.json
stwo_cairo_prover/test_data/test_pedersen_aggregator/: compiled.json
stwo_cairo_prover/test_data/test_poseidon_aggregator/: builtin_usage_flexible_cairo.cairo  compiled.json  do_30_poseidon_chains.cairo
stwo_cairo_prover/test_data/test_prove_verify_add_mod_builtin/: builtin_usage_flexible_cairo.cairo  compiled.json  mem  priv.json  pub.json  trace
stwo_cairo_prover/test_data/test_prove_verify_all_builtins/: builtin_usage_flexible_cairo.cairo  compiled.json  mem  priv.json  prover_input.json  prover_input_info  prover_input_info.json  pub.json  trace
stwo_cairo_prover/test_data/test_prove_verify_all_opcode_components/: all_opcode_components.cairo  compiled.json  mem  priv.json  proof.json  prover_input.json  prover_input_2D.json  prover_input_info  prover_input_info.json  pub.json  trace
stwo_cairo_prover/test_data/test_prove_verify_all_opcode_components_circuit_adaptation/: compiled.json
stwo_cairo_prover/test_data/test_prove_verify_all_opcode_components_generic_opcode/: all_opcode_components_no_qm31.cairo  compiled.json  proof.json
stwo_cairo_prover/test_data/test_prove_verify_bitwise_builtin/: builtin_usage_flexible_cairo.cairo  compiled.json  mem  priv.json  pub.json  trace
stwo_cairo_prover/test_data/test_prove_verify_large_trace_canonical_small/: compiled.json  large_trace.cairo
stwo_cairo_prover/test_data/test_prove_verify_mul_mod_builtin/: builtin_usage_flexible_cairo.cairo  compiled.json  mem  priv.json  pub.json  trace
stwo_cairo_prover/test_data/test_prove_verify_pedersen_builtin/: builtin_usage_flexible_cairo.cairo  compiled.json  do_chain_pedersen.cairo  mem  priv.json  pub.json  test_prove_verify_pedersen_builtin.cairo  trace
stwo_cairo_prover/test_data/test_prove_verify_poseidon_builtin/: builtin_usage_flexible_cairo.cairo  compiled.json  do_15_poseidon.cairo  do_chain_poseidon.cairo  mem  priv.json  prover_input_info  prover_input_info.json  pub.json  test_prove_verify_poseidon_builtin.cairo  trace
stwo_cairo_prover/test_data/test_prove_verify_range_check_bits_128_builtin/: builtin_usage_flexible_cairo.cairo  compiled.json  mem  priv.json  pub.json
stwo_cairo_prover/test_data/test_prove_verify_range_check_bits_96_builtin/: builtin_usage_flexible_cairo.cairo  compiled.json  mem  priv.json  pub.json  trace
stwo_cairo_prover/test_data/test_prove_verify_ret_opcode/: compiled.json  proof.json
stwo_cairo_prover/test_data/test_prove_verify_sha256_builtin/: builtin_usage_flexible_cairo.cairo  compiled.json
stwo_cairo_prover/test_data/test_ret/: compiled.json
stwo_cairo_prover/test_data/test_verify_program_builtin/: all_opcode_components_padded.cairo
(+2342 files in other folders)
