[workspace]
members = [
    "stwo_cairo_prover/crates/adapter",
    "stwo_cairo_prover/crates/prover",
    "stwo_cairo_prover/crates/cairo-serialize",
    "stwo_cairo_prover/crates/cairo-air",
    "stwo_cairo_prover/crates/common",
    "stwo_cairo_prover/crates/utils",
    "stwo_cairo_prover/crates/dev_utils",
    "stwo_cairo_prover/crates/cairo-serialize-derive",
    "cairo-prove"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
bincode = "1.3"
bzip2 = { version = "0.5.0", default-features = false, features = ["libbz2-rs-sys"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "bcc3e1fe9e4ab855939945a905e77d68087da0c2" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo", rev = "bcc3e1fe9e4ab855939945a905e77d68087da0c2" }
cairo-lang-executable = { git = "https://github.com/starkware-libs/cairo", rev = "bcc3e1fe9e4ab855939945a905e77d68087da0c2" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "bcc3e1fe9e4ab855939945a905e77d68087da0c2" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "95be27dcb1a766b6a5b20d77403fd8e3f22e7e04", features = [
    "extensive_hints",
    "mod_builtin",
    "clap",
], default-features = false }
clap = { version = "4.3.10", features = ["derive"] }
env_logger = { version = "0.11.5", default-features = false }
hex = "0.4.3"
itertools = "0.12.0"
log = "0.4.21"
num-traits = "0.2.17"
paste = "1.0"
rand = "0.8.5"
ruint = "1.12.3"
serde = "1.0.219"
serde_json = "1.0.1"
sonic-rs = "0.3.17"
starknet-curve = "0.6.0"
starknet-ff = "0.3.7"
starknet-types-core = { version = "=0.2.4", features = [
    "hash",
    "prime-bigint",
    "serde",
    "curve",
    "num-traits",
] }
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "45d0180", features = [
    "parallel",
    "prover",
], default-features = false }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", rev = "45d0180", features = [
    "parallel",
    "prover",
] }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "45d0180" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "45d0180" }
test-case = "3.3.1"
thiserror = { version = "2.0.12", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_arrays = "0.1.0"
rayon = "1.10.0"
indoc = "2.0.6"
tempfile = "3.8.1"
anyhow = "1.0.98"
dashmap = "6.0.1"
