[package]
name = "cairo-prove"
version = "0.1.0"
edition = "2024"

[dependencies]
stwo-cairo-adapter = { git = "https://github.com/massalabs/stwo-cairo", rev = "b06d3afffb802cfc699f52a70de823683a0374aa", features = [
    "std",
] }
stwo_cairo_prover = { git = "https://github.com/massalabs/stwo-cairo", rev = "b06d3afffb802cfc699f52a70de823683a0374aa" }
stwo-cairo-serialize = { git = "https://github.com/massalabs/stwo-cairo", rev = "b06d3afffb802cfc699f52a70de823683a0374aa" }
cairo-air = { git = "https://github.com/massalabs/stwo-cairo", rev = "b06d3afffb802cfc699f52a70de823683a0374aa" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb25173f9d8700adbd2770406d715fbf1bb9f8" }
cairo-lang-executable = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb25173f9d8700adbd2770406d715fbf1bb9f8" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb25173f9d8700adbd2770406d715fbf1bb9f8" }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb25173f9d8700adbd2770406d715fbf1bb9f8" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb25173f9d8700adbd2770406d715fbf1bb9f8" }
serde_json = "1.0.138"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "e2c6c91c73cd0bc351721f302390fcc0965c6224", features = [
    "mod_builtin",
] }
clap = { version = "4.5.38", features = ["derive"] }
num-bigint = "0.4.6"
camino = "1.1.9"
log = "0.4.20"
env_logger = "0.11.3"
