[package]
name = "cairo-prove"
version = "0.1.0"
edition = "2024"

[dependencies]
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a", features = [
    "std",
] }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
cairo-lang-compiler = { git = "https://github.com/m-kus/cairo.git", branch = "sha256-compress-libfunc" }
cairo-lang-executable = { git = "https://github.com/m-kus/cairo.git", branch = "sha256-compress-libfunc" }
cairo-lang-runner = { git = "https://github.com/m-kus/cairo.git", branch = "sha256-compress-libfunc" }
cairo-lang-casm = { git = "https://github.com/m-kus/cairo.git", branch = "sha256-compress-libfunc" }
cairo-lang-utils = { git = "https://github.com/m-kus/cairo.git", branch = "sha256-compress-libfunc" }
serde_json = "1.0.138"
cairo-vm = { git = "https://github.com/m-kus/cairo-vm.git", branch = "sha256", features = [
    "mod_builtin",
] }
clap = { version = "4.5.38", features = ["derive"] }
num-bigint = "0.4.6"
camino = "1.1.9"
log = "0.4.20"
env_logger = "0.11.3"
