[package]
name = "cairo-prove"
version = "0.1.0"
edition = "2024"

[dependencies]
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "3bf6e76" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "3bf6e76" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "3bf6e76" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "3bf6e76" }
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "d9176e6e22319370a8501f799829b920c0db2eac", features = [
    "parallel",
    "prover",
] }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb251" }
cairo-lang-executable = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb251" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb251" }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb251" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "86eb251" }
serde_json = "1.0.142"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "e2c6c91c73cd0bc351721f302390fcc0965c6224", features = [
    "mod_builtin",
] }
clap = { version = "4.5.38", features = ["derive"] }
num-bigint = "0.4.6"
camino = "1.1.9"
log = "0.4.20"
env_logger = "0.11.3"
itertools = "0.12.0"
