[workspace]
members = [
    "crates/runner",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
bytemuck = { version = "1.16.3", features = ["derive"] }
cairo-lang-casm = "2.7.1"
clap = { version = "4.3.10", features = ["derive"] }
env_logger = "0.11.3"
hex = "0.4.3"
itertools = "0.12.0"
log = "0.4.21"
num-traits = "0.2.17"
rand = "0.8.5"
serde = "1.0.207"
serde_json = "1.0.1"
sonic-rs = "0.3.10"
# TODO(ShaharS): take stwo version from the source repository.
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "9cfd48a" }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
paste = "1.0"
starknet-ff = "0.3.7"
ruint = "1.12.3"

[profile.bench]
codegen-units = 1
lto = true
