[workspace]
members = [
    "crates/adapted_prover",
    "crates/adapter",
    "crates/prover",
    "crates/cairo-serialize",
    "crates/cairo-serialize-derive",
    "crates/utils",
    "crates/run_and_prove",
    "crates/vm_runner",
    "crates/common",
    "crates/recursion_bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
cairo-lang-casm = "2.7.1"
# TODO(yuval): Use an official version, not a specific commit.
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "b9fb58d6b879f92cbd76abd85ea44db8eb81b554", features = [
    "mod_builtin",
], default-features = false }
# TODO(yuval): Use an official version, not a specific commit.
# TODO(yg): this won't work as it's a private repo. Open it and/or move vm-runner to it.
cairo-program-runner = { git = "https://github.com/starkware-industries/bootloader-hints", rev = "bd23e1fc3b42544c25cab39d8e88e05e52d4e313" }
clap = { version = "4.3.10", features = ["derive"] }
env_logger = { version = "0.11.5", default-features = false }
hex = "0.4.3"
itertools = "0.12.0"
log = "0.4.21"
num-traits = "0.2.17"
rand = "0.8.5"
serde = "1.0.207"
serde_json = "1.0.1"
stwo_cairo_prover = { path = "crates/prover", version = "~0.1.0" }
stwo_cairo_utils = { path = "crates/utils", version = "~0.1.0" }
stwo-cairo-adapter = { path = "crates/adapter" }
stwo-cairo-common = { path = "crates/common" }
# TODO(ShaharS): take stwo version from the source repository.
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "a194fad", features = [
    "parallel",
], default-features = false }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "a194fad" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "a194fad" }
thiserror = { version = "2.0.10", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
paste = "1.0"
starknet-ff = "0.3.7"
ruint = "1.12.3"
# Pin wasm-bindgen version to the version pinned by lambdaclass/cairo-vm/vm
# TODO(yuval): remove the pin once the pinning in lambdaclass/cairo-vm/vm is removed.
wasm-bindgen = { version = "= 0.2.92" }

[profile.bench]
codegen-units = 1
lto = true
