[workspace]
members = [
    "crates/adapter",
    "crates/prover",
    "crates/cairo-serialize",
    "crates/cairo-serialize-derive",
    "crates/utils",
    "crates/common",
    "crates/cairo-air",
    "crates/dev_utils",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/starkware-libs/stwo-cairo"

[workspace.dependencies]
indexmap = "2.2.6"
bincode = "1.3"
bzip2 = { version = "0.5.0", default-features = false, features = ["libbz2-rs-sys"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
cairo-vm = { version = "3.0.0", features = [
    "extensive_hints",
    "mod_builtin",
    "clap",
], default-features = false }
clap = { version = "4.3.10", features = ["derive"] }
env_logger = { version = "0.11.5", default-features = false }
hex = "0.4.3"
itertools = "0.12.0"
log = "0.4.21"
num-traits = "0.2.17"
paste = "1.0"
rand = "0.8.5"
ruint = "1.12.3"
serde = "1.0.219"
serde_json = "1.1.0"
sonic-rs = "0.3.17"
starknet-curve = "0.6.0"
starknet-ff = "0.3.7"
starknet-types-core = { version = "=0.2.4", features = [
    "hash",
    "prime-bigint",
    "serde",
    "curve",
    "num-traits",
] }
stwo-cairo-prover = { path = "crates/prover", version = "~1.1.0" }
stwo-cairo-utils = { path = "crates/utils", version = "~1.1.0" }
stwo-cairo-adapter = { path = "crates/adapter", version = "~1.1.0" }
stwo-cairo-common = { path = "crates/common", version = "~1.1.0" }
cairo-air = { path = "crates/cairo-air", version = "~1.1.0" }
stwo-cairo-serialize = { path = "crates/cairo-serialize", version = "~1.1.0" }
stwo-cairo-serialize-derive = { path = "crates/cairo-serialize-derive", version = "~1.1.0" }
stwo = "2.1.0"
stwo-constraint-framework = "2.1.0"
stwo-air-utils-derive = "2.1.0"
stwo-air-utils = "2.1.0"
test-case = "3.3.1"
thiserror = { version = "2.0.12", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_arrays = "0.1.0"
rayon = "1.10.0"
indoc = "2.0.6"
tempfile = "3.8.1"
anyhow = "1.0.98"
dashmap = "6.0.1"

[profile.bench]
codegen-units = 1
lto = true

# Optimize witness generation and FFTs. This is usually enough to run the tests without stack overflows,
# while maintaining a reasonable compile time.
# In the cases where it's not enough, try to manually increase the stack size,
# See cairo-ci.yaml for an example command.
[profile.witness-opt-1]
inherits = "dev"
package = { "stwo-cairo-prover" = { opt-level = 1 }, "stwo" = { opt-level = 1 } }

[profile.adapter-release]
inherits = "dev"
package = { "stwo-cairo-adapter" = { opt-level = 3 } }
debug-assertions = false
