[package]
name = "adapted_stwo"
version = "0.1.0"
edition = "2021"

[features]
std = ["stwo-cairo-adapter/std"]

[dependencies]
clap.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
stwo_cairo_prover.workspace = true
stwo_cairo_utils.workspace = true
stwo-cairo-adapter.workspace = true
stwo-prover.workspace = true
thiserror.workspace = true
tracing.workspace = true
