[package]
name = "adapted_stwo"
version = "0.1.0"
edition = "2021"

[features]
std = ["stwo-cairo-adapter/std"]

[dependencies]
cairo-air.workspace = true
clap.workspace = true
log.workspace = true
serde.workspace = true
starknet-ff.workspace = true
stwo_cairo_prover.workspace = true
stwo_cairo_utils.workspace = true
stwo-cairo-adapter.workspace = true
stwo-cairo-serialize.workspace = true
stwo.workspace = true
thiserror.workspace = true
tracing.workspace = true
sonic-rs = { version = "0.3.17" }
sas = { version = "0.1.3", features = ["rayon", "numa"] }
