[package]
name = "stwo-cairo-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Adapter for converting Cairo VM execution traces to Stwo prover format"

[features]
default = []
slow-tests = []
extract-mem-trace = []

[dependencies]
bytemuck.workspace = true
cairo-lang-casm.workspace = true
cairo-vm.workspace = true
indoc.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
stwo-cairo-common = { path = "../common", version = "~1.0.0" }
tracing.workspace = true
thiserror.workspace = true
stwo.workspace = true
memmap2 = "0.9.5"
bincode = { version = "2.0.1", features = ["serde"] }
dashmap.workspace = true
rayon.workspace = true
clap.workspace = true
crypto-bigint = "0.5.1"
anyhow.workspace = true

[dev-dependencies]
stwo-cairo-utils.workspace = true
cairo-lang-casm.workspace = true
rand.workspace = true
test-case.workspace = true
stwo-cairo-dev-utils.workspace = true
