[package]
name = "cairo-air"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["stwo/std", "stwo-constraint-framework/std", "dep:sonic-rs"]
slow-tests = []

[dependencies]
bincode.workspace = true
bzip2.workspace = true
itertools.workspace = true
clap.workspace = true
log.workspace = true
num-traits.workspace = true
paste.workspace = true
# TODO(Ohad): Add parallel config.
stwo-cairo-common.workspace = true
rayon.workspace = true
serde.workspace = true
starknet-ff.workspace = true
starknet-types-core.workspace = true
stwo-cairo-serialize = { path = "../cairo-serialize" }
stwo.workspace = true
stwo-constraint-framework.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tracing.workspace = true
hashbrown.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sonic-rs = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
dev-utils.workspace = true
