[package]
name = "cairo-air"
version.workspace = true
edition.workspace = true

[features]
slow-tests = []

[dependencies]
bincode.workspace = true
bzip2.workspace = true
itertools.workspace = true
clap.workspace = true
log.workspace = true
num-traits.workspace = true
paste.workspace = true
# TODO(Ohad): Add parallel config.
stwo-cairo-common.workspace = true
rayon.workspace = true
serde.workspace = true
starknet-curve.workspace = true
starknet-ff.workspace = true
starknet-types-core.workspace = true
stwo-cairo-serialize = { path = "../cairo-serialize" }
stwo.workspace = true
stwo-constraint-framework.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
sonic-rs.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
dev-utils.workspace = true
