[package]
name = "cairo-air"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AIR (Algebraic Intermediate Representation) definitions for Cairo programs"

[features]
slow-tests = []

[dependencies]
bincode.workspace = true
bzip2.workspace = true
itertools.workspace = true
clap.workspace = true
log.workspace = true
num-traits.workspace = true
paste.workspace = true
# TODO(Ohad): Add parallel config.
stwo-cairo-common = { path = "../common", version = "~1.0.0" }
rayon.workspace = true
serde.workspace = true
starknet-curve.workspace = true
starknet-ff.workspace = true
starknet-types-core.workspace = true
stwo-cairo-serialize = { path = "../cairo-serialize", version = "~1.0.0" }
stwo.workspace = true
stwo-constraint-framework.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
sonic-rs.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
stwo-cairo-dev-utils.workspace = true
expect-test = "1.4"