[package]
name = "stwo_cairo_air"
version = "0.1.0"
edition = "2021"

[features]
slow-tests = []
relation-tracker = []

# Define Nightly features in order to allow selective tests
# Use the following #[cfg(feature = "nightly")]
# to enable nightly features on specific tests.
nightly = []

[dependencies]
stwo-prover.workspace = true
num-traits.workspace = true
stwo-air-utils-derive.workspace = true
stwo-air-utils.workspace = true
rayon = { version = "1.10.0" }
stwo-cairo-common.workspace = true
serde.workspace = true
stwo-cairo-serialize = { path = "../cairo-serialize" }
itertools.workspace = true
hex.workspace = true
starknet-ff.workspace = true
stwo-cairo-adapter.workspace = true
stwo_cairo_prover.workspace = true
paste.workspace = true
tracing.workspace = true
cairo-lang-casm.workspace = true
cairo-vm.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
rand.workspace = true