[package]
name = "cairo-prover-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-air.workspace = true
clap.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sonic-rs = { version = "0.3.17", default-features = true }
starknet-ff.workspace = true
stwo_cairo_prover.workspace = true
stwo-cairo-adapter = { workspace = true, features = ["std"] }
stwo-cairo-serialize.workspace = true
stwo-prover.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
env_logger.workspace = true

# TODO(Ohad): add verify binary.
[[bin]]
name = "prove"
path = "src/prove.rs"
