[package]
name = "stwo-cairo-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common types and utilities shared across Stwo Cairo crates"

[features]
default = ["prover"]
prover = [
    "dep:stwo",
    "dep:stwo-constraint-framework",
    "dep:stwo-cairo-serialize",
    "stwo/parallel",
    "stwo/prover",
    "stwo-constraint-framework/parallel",
    "stwo-constraint-framework/prover",
]

[dependencies]
bytemuck.workspace = true
itertools.workspace = true
ruint.workspace = true
serde.workspace = true
starknet-ff.workspace = true
starknet-types-core.workspace = true
stwo-cairo-serialize = { path = "../cairo-serialize", optional = true }
stwo = { workspace = true, optional = true }
stwo-types = { workspace = true, default-features = false }
stwo-constraint-framework = { workspace = true, optional = true }
serde_arrays.workspace = true
starknet-curve.workspace = true
rayon.workspace = true

[dev-dependencies]
rand.workspace = true
