[package]
name = "stwo-cairo-continuation"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-cairo-adapter.workspace = true
stwo_cairo_prover = { path = "../prover" }
cairo-air = { path = "../cairo-air" }
stwo-prover.workspace = true
serde_json.workspace = true

[dev-dependencies]
cairo-vm.workspace = true
tracing = { workspace = true }
