[package]
name = "dev-utils"
version.workspace = true
edition.workspace = true

[dependencies]
cairo-air.workspace = true
clap.workspace = true
serde.workspace = true
starknet-ff.workspace = true
sonic-rs.workspace = true
stwo-cairo-adapter.workspace = true
stwo-cairo-serialize.workspace = true
stwo.workspace = true
stwo_cairo_prover.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tracing.workspace = true
log.workspace = true
regex = "1.11.1"
num-bigint = "0.4.6"

serde_json.workspace = true
cairo-vm.workspace = true
cairo-lang-runner = { version = "2.12.4-dev.0" }
cairo-lang-executable = { version = "2.12.4-dev.0" }
cairo-lang-utils = { version = "2.12.4-dev.0" }
