[package]
name = "dev-utils"
version.workspace = true
edition.workspace = true

[[bin]]
name = "extract_mem_trace"
required-features = ["stwo-cairo-adapter/extract-mem-trace"]

[dependencies]
anyhow.workspace = true
cairo-air.workspace = true
clap.workspace = true
serde.workspace = true
starknet-ff.workspace = true
sonic-rs.workspace = true
stwo-cairo-adapter.workspace = true
stwo-cairo-serialize.workspace = true
stwo_cairo_utils.workspace = true
stwo.workspace = true
stwo_cairo_prover.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tracing.workspace = true
log.workspace = true
regex = "1.11.1"
num-bigint = "0.4.6"
bincode = "1.3.3"
cairo-lang-runner.workspace = true
cairo-lang-executable.workspace = true
cairo-lang-utils.workspace = true

serde_json.workspace = true
cairo-vm.workspace = true

[dev-dependencies]
tempfile = "3.8.0"
