[package]
name = "dev-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Development utilities and tools for Stwo Cairo prover"

[[bin]]
name = "extract_mem_trace"
required-features = ["stwo-cairo-adapter/extract-mem-trace"]

[dependencies]
anyhow.workspace = true
cairo-air = { path = "../cairo-air", version = "~1.0.0" }
clap.workspace = true
serde.workspace = true
starknet-ff.workspace = true
sonic-rs.workspace = true
stwo-cairo-adapter = { path = "../adapter", version = "~1.0.0" }
stwo-cairo-serialize = { path = "../cairo-serialize", version = "~1.0.0" }
stwo_cairo_utils = { path = "../utils", version = "~1.0.0" }
stwo.workspace = true
stwo_cairo_prover = { path = "../prover", version = "~1.0.0" }
tracing-subscriber.workspace = true
thiserror.workspace = true
tracing.workspace = true
log.workspace = true
regex = "1.11.1"
num-bigint = "0.4.6"
bincode = "1.3.3"
cairo-lang-runner.workspace = true
cairo-lang-executable.workspace = true
cairo-lang-utils.workspace = true

serde_json.workspace = true
cairo-vm.workspace = true

[dev-dependencies]
tempfile = "3.8.0"
