[package]
name = "stwo-cairo-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "STARK prover for Cairo programs using the Stwo proving system"

[features]
slow-tests = []
relation-tracker = []

# Define Nightly features in order to allow selective tests
# Use the following #[cfg(feature = "nightly")]
# to enable nightly features on specific tests.
nightly = []

[dependencies]
stwo-air-utils-derive.workspace = true
stwo-air-utils.workspace = true
hex.workspace = true
itertools.workspace = true
num-traits.workspace = true
paste.workspace = true
# TODO(Ohad): Add parallel config.
stwo-cairo-common = { path = "../common", version = "~1.1.0", features = ["prover"] }
stwo-cairo-adapter = { path = "../adapter", version = "~1.1.0" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
starknet-curve.workspace = true
starknet-ff.workspace = true
starknet-types-core.workspace = true
stwo-cairo-serialize = { path = "../cairo-serialize", version = "~1.1.0" }
cairo-air = { path = "../cairo-air", version = "~1.1.0" }
stwo = { workspace = true, features = ["parallel", "prover"] }
stwo-constraint-framework = { workspace = true, features = ["parallel", "prover"] }
tracing.workspace = true
dashmap.workspace = true
indexmap.workspace = true
bytemuck.workspace = true

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
sonic-rs.workspace = true

# Override getrandom feature flags for indirect dependencies.
[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
getrandom_v2 = { version = "0.2", package = "getrandom", features = ["js"] }
getrandom_v3 = { version = "0.3", package = "getrandom", features = ["wasm_js"] }

[dev-dependencies]
stwo-cairo-dev-utils = { path = "../dev_utils" }
generic-tests = "0.1.3"
tempfile = "3.19.1"
test-log = { version = "0.2.17", features = ["trace"] }
tracing-subscriber.workspace = true
rand.workspace = true
sonic-rs.workspace = true
