[package]
name = "run_and_prove"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
log.workspace = true
serde_json.workspace = true
stwo_cairo_prover.workspace = true
stwo_cairo_utils.workspace = true
stwo-prover.workspace = true
thiserror-no-std.workspace = true
tracing.workspace = true
