[package]
name = "stwo_cairo_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-executable.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-utils.workspace = true
cairo-vm = { workspace = true, default_features = true }
stwo-cairo-adapter.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
